# opencrayfish

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_CHT.md  SECURITY.md  config_sample.yaml  conftest.py  main.py  pyproject.toml  requirements.txt  soul.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
connectors/: __init__.py  discovery.py  manifest.py  registry.py  telegram.py  web_chat.py
core/: __init__.py  _cli_connector.py  _cli_provider.py  _cli_tool.py  brain.py  cli.py  cognition.py  config.py  dropin.py  emotions.py  empathy.py  heartbeat.py  intent_router.py  jsonl_writer.py  monitor.py  positive_filter.py  provider.py  provider_manifest.py  reflection.py  scheduler.py  soul_handler.py  stm.py
core/brain/: __init__.py  identity_responder.py  orchestrator.py  prompt_assembly.py  task_parsing.py
core/skills/: __init__.py  argspec.py  base.py  direct_answer.py  discovery.py  identity.py  manifest.py  proactive_learning.py  recall.py  recurring_research.py  registry.py  research.py  self_reflect.py
examples/opencrayfish-skill-echo/: README.md  pyproject.toml
examples/opencrayfish-skill-echo/opencrayfish_skill_echo/: __init__.py
examples/opencrayfish-skill-echo/tests/: test_echo.py
models/: .gitkeep
scripts/: _probe_mslearn_mcp.py  smoke_cognition_dispatch.py  smoke_dashboard_rotation.py  smoke_foreground_priority.py  smoke_mcp_bridge.py  smoke_phase3_dispatch.py  smoke_rotation_reflection_identity.py  smoke_skill_menu.py  smoke_soul_atomic.py
tests/: __init__.py  test_argspec.py  test_cli.py  test_connector_registry.py  test_dropin_discovery.py  test_example_echo_integration.py  test_intent_router.py  test_jsonl_writer_schema.py  test_mcp_bridge.py  test_positive_filter.py  test_prompt_assembly.py  test_provider_backend_routing.py  test_provider_manifest.py  test_skill_context.py  test_skill_discovery.py  test_skill_protocol_surface_v1.py  test_stm_rotation.py  test_task_parsing.py  test_tool_context.py
tools/: __init__.py  archive_read.py  base.py  discovery.py  manifest.py  mcp_bridge.py  registry.py  searxng.py
ui/: __init__.py  dashboard.py  web_chat.py
ui/panels/: __init__.py  _paths.py  _readers.py  deliberation.py  footer.py  header.py  mood.py  proactive.py  reflection.py  skills.py  tasks.py  tools.py  vitals.py
